...
      />
      <Tabs.Screen
        name="plan"
        options={{
          title: t('tabPlan'),
          tabBarIcon: ({ color }) => <CalendarIcon size={28} color={color} />,
          tabBarButtonTestID: 'e2e_tab_plan',
        }}
        listeners={() => ({
          tabPress: handlePlanTabPress,
        })}
      />
      <Tabs.Screen
...
